<resources>
    <string name="app_name">Delivo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="delivoNow">Delivo Now</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_heading">Sign Up</string>
    <string name="confirmation_heading">Confirmation</string>
    <string name="confirmation_text">A rider has been assigned to you. He is 2 km away. Will take 6 mins to reach pickup
        address.
    </string>
    <string name="delivery_time">Estimated Delivo time:</string>
    <string name="title_activity_screen_splash">Splash</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="rider_detail_head">Here are your rider details</string>
    <string name="google_app_map_id">AIzaSyCGWoe8_S8QqeDm8OMUGSAp2atLfNU2QSY</string>
    <string name="map_key">AIzaSyDuduWAYDUbloxpCR60XMmRWEwQ9MxDVSo</string>
    <string name="pick_address_empty">Please specify pick address</string>
    <string name="drop_address_empty">Please specify drop address</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="toast_crash">Delivery App Crashed !</string>
    <string name="profile_heading">User Profile</string>

    <string-array name="delivo_utilities">

        <item>Home</item>
        <item>My Orders</item>
        <item>Call Us</item>
        <item>Settings</item>
        <item>Sign Out</item>

    </string-array>


    <string name="title_activity_test">TestActivity</string>
    <string name="Main_Screen_Title">DELIVO</string>


    <string name="input_name_hint">Enter Name</string>
    <string name="input_password_hint">Enter Password</string>
    <string name="input_email_hint">Enter Email</string>
    <string name="input_phoneno_hint">User Phone No</string>
    <string name="user_contact">Phone No</string>
    <string name="account_signup_label">Dont have an account So Please Sign Up</string>
    <string name="account_signup_confirmation_password">Confirm Password</string>
    <string name="input_verify_pin">Enter Verification Code</string>

    <string name="input_pick_person_name">Sender Name</string>
    <string name="input_pick_person_number">Contact</string>

    <string name="input_pick_detailed_address">Detailed Address</string>

    <string name="input_pick_details">PickUp Details</string>
    <string name="input_pick_time">Pick Time</string>
    <!---->
    <string name="input_drop_person_name">Receiver Name</string>
    <string name="input_drop_person_number">Contact</string>

    <string name="input_drop_detailed_address">Detailed Address</string>

    <string name="input_drop_details">DropOff Details</string>
    <string name="input_drop_time">Drop Time</string>


    <string name="account_login">LOGIN</string>
    <string name="account_signup">Sign Up</string>
    <string name="fb_login">FACEBOOK LOGIN</string>
    <string name="already_signin">Already have an account ?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_profile_tittle">My Profile</string>
    <string name="my_order_tittle">My Orders</string>

    <string name="save_btn">Save</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="save_password">Save Password</string>
    <string name="near_by_address_label">select near by place</string>
    <string name="pick_now">Pick Now</string>
    <string name="pick_later">Pick Later</string>
    <string name="pay_at_pick_label">Do you want rider to pay?</string>
    <string name="pay_at_pick_label_dialoge">Enter amount that you want to rider to pay at pick up on your behalf</string>


    <string name="pay_amount">Enter Pay Amount</string>

    <string name="add_pick_label">Add Pick Location</string>
    <string name="add_drop_label">Add DropOff Location</string>
    <string name="add_pick_btn">Add PickUp Details</string>


</resources>
