<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="screens.Confirmation"

        >


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="30dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:text="@string/confirmation_heading"
                android:textSize="@dimen/size_heading"
                />

        <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmation_text"
                android:padding="20dp"
                android:textSize="24sp"
                />


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_time"
                android:padding="20dp"
                />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginTop="40dp">
            <Button
                    android:id="@+id/cancel"
                    style="@style/Button_Signup_grey"
                    android:text="@string/cancel"
                    android:layout_marginLeft="20dp"/>
            <Button
                    android:id="@+id/confirm"
                    style="@style/Button_Signup"
                    android:text="@string/confirm"
                    android:layout_marginLeft="20dp"
                    />


        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
