<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context="com.attribe.delivo.app.OrderCreating">
    <include layout="@layout/toolbar"
    android:id="@+id/mtoolbar"/>


      <!--Order confirm Frame-->
        <FrameLayout

                     android:id="@+id/confirmorder_frame"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                    android:visibility="gone"

        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="75dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp"
                        android:text="@string/confirmation_heading"
                        android:textSize="@dimen/size_heading"
                        android:textStyle="bold"/>

                <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmation_text"
                        android:padding="20dp"
                        android:textSize="24sp"
                />


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_time"
                        android:padding="20dp"
                />

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:layout_marginTop="40dp">
                    <Button
                            android:id="@+id/cancel"
                            style="@style/Button_Signup_grey"
                            android:text="@string/cancel"
                            android:layout_marginLeft="20dp"/>
                    <Button
                            android:id="@+id/confirm"
                            style="@style/Button_Signup"
                            android:text="@string/confirm"
                            android:layout_marginLeft="20dp"
                    />


                </LinearLayout>
            </LinearLayout>




        </FrameLayout>

    <!--Order creating layout-->

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ordercreating_layout"
                android:layout_below="@+id/mtoolbar">

            <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="What is your Order ...???"-->
            <!--android:layout_marginTop="50dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:textSize="25sp"-->
            <!--android:textStyle="bold"-->
            <!--android:textColor="@color/indicator_color"/>-->

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp">

                <TextView
                        android:id="@+id/tvPickAdr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pick Location :"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/tvPickAdrDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="North Karachi"
                        android:layout_toRightOf="@+id/tvPickAdr"
                        android:layout_marginLeft="10dp"
                        android:textSize="18sp"
                        android:maxLines = "2"
                        android:scrollbars = "vertical"/>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">
                <TextView
                        android:id="@+id/tvDropAdr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Drop Location :"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/tvDropAdrDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Shahrah e Faisal"
                        android:layout_toRightOf="@+id/tvDropAdr"
                        android:layout_marginLeft="10dp"
                        android:textSize="18sp"
                        android:maxLines = "2"
                        android:scrollbars = "vertical"/>

            </RelativeLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Order Description :"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/indicator_color"/>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@drawable/rounded_frame"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="7dp">

                <EditText
                        android:id="@+id/et_order_description_area"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Place your order description here ..."
                        android:gravity="top|left"
                        android:background="@android:color/transparent"/>

            </FrameLayout>

            <Button android:id="@+id/placeOrderBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SUBMIT"
                    android:textSize="15sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    style="@style/Button"/>
        </LinearLayout>

    <!--</ScrollView>-->

</RelativeLayout>
