<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pick_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"

    >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="9"
        android:orientation="vertical"
        >

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/steptwo"-->
            <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
            <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
            <!--android:layout_marginTop="@dimen/activity_horizontal_margin"-->
            <!--android:layout_marginBottom="@dimen/activity_horizontal_margin"></ImageView>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"



            >
            <!--android:layout_margin="@dimen/medium_margin"-->

            <View android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:alpha="0.2"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:id="@+id/pick_person_name"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"
                android:paddingLeft="@dimen/normal_padding"
                android:textColorHint="@color/white"
                android:hint="@string/input_pick_person_name"
                android:textAppearance="?android:attr/textAppearanceSmall"




                />
        </RelativeLayout>
<!---->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"



            >
            <!--android:layout_margin="@dimen/medium_margin"-->

            <View android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:alpha="0.2"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:id="@+id/pick_person_contact"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"
                android:paddingLeft="@dimen/normal_padding"
                android:textColorHint="@color/white"
                android:hint="@string/input_pick_person_number"
                android:textAppearance="?android:attr/textAppearanceSmall"




                />
        </RelativeLayout>
<!---->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"



            >
            <!--android:layout_margin="@dimen/medium_margin"-->

            <View android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:alpha="0.2"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:id="@+id/pick_time"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"
                android:paddingLeft="@dimen/normal_padding"
                android:textColorHint="@color/white"
                android:hint="@string/input_pick_detailed_address"
                android:textAppearance="?android:attr/textAppearanceSmall"




                />
        </RelativeLayout>
<!---->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"



            >
            <!--android:layout_margin="@dimen/medium_margin"-->

            <View android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:alpha="0.2"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="datetime"
                android:id="@+id/pick_date"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"
                android:paddingLeft="@dimen/normal_padding"
                android:textColorHint="@color/white"
                android:hint="@string/input_pick_time"
                android:textAppearance="?android:attr/textAppearanceSmall"




                />
        </RelativeLayout>
<!---->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="2"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"



            >
            <!--android:layout_margin="@dimen/medium_margin"-->

            <View android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:alpha="0.2"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:id="@+id/pick_description"
                android:textColor="@color/white"

                android:background="@android:color/transparent"
                android:paddingLeft="@dimen/normal_padding"
                android:textColorHint="@color/white"
                android:hint="@string/input_pick_details"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="left"
                android:padding="@dimen/normal_margin"





                />
        </RelativeLayout>

        <!---->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_weight="1.25"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/normal_margin"


            >
            <!--android:layout_margin="@dimen/medium_margin"-->

            <View android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:alpha="0.2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:id="@+id/add_pickdetails_btn"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="Add Pick Details"
                android:background="@drawable/white_border"

                />

        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>
